# mrg_modimoop

./: README.md
mrg_modimoop_bringup/: README.md  package.xml  setup.cfg  setup.py
mrg_modimoop_bringup/launch/: bringup.launch.py  rviz.launch.py  sim.launch.py
mrg_modimoop_description/: CMakeLists.txt  README.md  package.xml
mrg_modimoop_description/config/: vehicle_gz_bridge.yaml
mrg_modimoop_description/hooks/: resource_paths.sh
mrg_modimoop_description/models/mrg_modimoop_base/hull/: hull.STL  hull_simplified.STL
mrg_modimoop_description/models/mrg_modimoop_base/keel/: keel.STL  keel_bulb.STL  keel_plate.STL
mrg_modimoop_description/models/mrg_modimoop_base/mainsail/: mainsail.STL  mainsail_simplified.STL
mrg_modimoop_description/models/mrg_modimoop_base/rudder/: rudder.STL  rudder_simplified.STL
mrg_modimoop_description/models/mrg_modimoop_base/simulation/: gz.xacro
mrg_modimoop_description/models/mrg_modimoop_base/tailwing/: tailwing.STL
mrg_modimoop_description/urdf/: mrg_modimoop.urdf.xacro  test.urdf.xacro
mrg_modimoop_description/world_models/custom_waves/: model.config  model.sdf
